--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="general_select" context="Selecting a specific location in MEGA. This is the text of the button">Select</string>
     <string name="general_create" context="This is the final button when creating a folder in the dialog where the user inserts the folder name">Create</string>
     <string name="general_upload" context="Button text when uploading a file to a previously selected location in MEGA">Upload File</string>
-    <string name="general_download" context="Item menu option upon right click on one or multiple files.">Download</string>
+    <string name="general_download" context="Item menu option upon clicking on one or multiple files.">Download</string>
     <string name="general_add" context="button">Add</string>
     <string name="general_empty" context="Button to delete the contents of the trashbin. Can also be translated as &quot;clear&quot;">Empty</string>
     <string name="general_loading" context="state previous to import a file">Loading&#8230;</string>
@@ -40,14 +40,14 @@
     
     <string name="action_change_mode_in" context="Folders that have been shared with the user from other MEGA users">Incoming Shares</string>
     <string name="action_change_mode_out" context="Folders that have been shared by the user to other MEGA users">Outgoing Shares</string>
-    <string name="action_logout" context="Button where the user can sign off / logout">Logout</string>
+    <string name="action_logout" context="Button where the user can sign off or logout">Logout</string>
     <string name="action_add" context="Menu item">Upload&#8230;</string>
     <string name="action_create_folder" context="Menu item">Create new folder</string>
     <string name="action_upload" context="Button text when choosing the destination location in MEGA">Upload to</string>
     <string name="action_settings" context="Menu item">Settings</string>
     <string name="action_search" context="Search button">Search</string>
     <string name="action_refresh" context="Menu item">Refresh</string>
-    <string name="action_sort_by" context="Menu item">Sort by</string>
+    <string name="action_sort_by" context="Menu item">Sort by&#8230;</string>
     <string name="action_help" context="Menu item">Help</string>
     <string name="action_upgrade_account" context="Change from a free account to paying MEGA">Upgrade account</string>
     <string name="action_select_all" context="Menu item to select all the elements of a list">Select All</string>
@@ -78,9 +78,9 @@
         <item quantity="other" context="Title of the incoming shared folders of a user.">shared folders</item>
     </plurals>
     
-    <plurals name="general_num_downloads">
-        <item quantity="one" context="Item menu option upon right click on one or multiple files.">download</item>
-        <item quantity="other">Downloads</item>
+    <plurals name="general_num_downloads" context="in the notification. When downloading the notification is like 3 downloads.">
+        <item quantity="one">download</item>
+        <item quantity="other">downloads</item>
     </plurals>
     
     <plurals name="general_num_uploads">
@@ -94,7 +94,7 @@
     </plurals>
     
     
-    <string name="login_text" context="Login button">Login</string>
+    <string name="login_text" context="Login label">Login</string>
     <string name="email_text" context="email label">e-mail</string>
     <string name="password_text" context="password label">password</string>
     <string name="confirm_password_text" context="label shown in the confirmation of the password when creating an account">Confirm password</string>
@@ -119,9 +119,9 @@
     <string name="login_preparing_filelist" context="After login, updating the file list, the file list should be processed before showing it to the user">Preparing file list</string>
     
     
-    <string name="create_account_text" context="button that allows the user to create an account">Create account</string>
-    <string name="name_text" context="Refers to the name of a folder or file.">name</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the terms of service">I agree with MEGA's &lt;a href="https://mega.co.nz/mobile_privacy.html"&gt;Terms of Service&lt;/a&gt;</string>
+    <string name="create_account_text" context="label that allows the user to create an account">Create account</string>
+    <string name="name_text" context="Name of the user">name</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the terms of service">I agree with MEGA\'s &lt;a href="https://mega.co.nz/mobile_privacy.html"&gt;terms of service&lt;/a&gt;</string>
     <string name="already_account" context="Does the user already have a MEGA account">Already have an account?</string>
     
     <string name="create_account_no_terms" context="warning dialog">You have to accept our terms of service.</string>
@@ -132,9 +132,9 @@
     
     <string name="create_account_confirm_title" context="Title that is shown when e-mail confirmation is still required for the account">Confirmation required</string>
     <string name="create_account_confirm" context="">Please check your e-mail and click the link to login and confirm your account</string>
-    <string name="create_account_creating_account">Creating account...</string>
+    <string name="create_account_creating_account">Connecting to the server: creating account</string>
     
-	<string name="section_cloud_drive" context="The name of every users root drive in the cloud of MEGA. The term 'cloud' is a new computer term and can probably not be translated. Do not translate &quot;cloud&quot; literal unless your language allows this. Please see http://en.wikipedia.org/wiki/Cloud_computing for your reference.">Cloud Drive</string>
+    <string name="section_cloud_drive" context="The name of every users root drive in the cloud of MEGA. The term cloud is a new computer term and can probably not be translated. Do not translate &quot;cloud&quot; literal unless your language allows this. Please see http://en.wikipedia.org/wiki/Cloud_computing for your reference.">Cloud Drive</string>
 	<string name="section_saved_for_offline" context="title of the screen that shows the files saved for offline in the device">Saved for Offline</string>
 	<string name="section_shared_with_me" context="title of the screen that shows all the folders that the user shares with other users and viceversa">Shared with me</string>
 	<string name="section_rubbish_bin" context="The title of the trash bin in the tree of the file manager.">Rubbish Bin</string>
@@ -142,10 +142,10 @@
 	<string name="tab_contacts" context="Title of the contact tab. Capital letters">CONTACTS</string>
 	<string name="tab_sent_requests" context="Title of the sent requests tab. Capital letters">SENT REQUESTS</string>
 	<string name="tab_received_requests" context="Title of the received requests tab. Capital letters">RECEIVED REQUESTS</string>
-	<string name="sent_requests_empty" context="the user hasn't sent any contact request to other users">No sent requests</string>
-	<string name="received_requests_empty" context="the user hasn't received any contact request from other users">No received requests</string>
+	<string name="sent_requests_empty" context="the user has not sent any contact request to other users">No sent requests</string>
+	<string name="received_requests_empty" context="the user has not received any contact request from other users">No received requests</string>
 	<string name="section_transfers" context="Title for the file transfer screen (with the up &amp; download)">Transfers</string>
-	<string name="section_account" context="button to the settings of the user's account">My Account</string>
+	<string name="section_account" context="button to the settings of the account">My Account</string>
 	<string name="section_photo_sync" context="title of the screen where the camera images are uploaded">Camera Uploads</string>
 	<string name="used_space" context="Used space &quot;5MB of 100MB&quot;.">%1$s of %2$s</string>
 	<string name="tab_incoming_shares" context="Capital letters. Incoming shared folders. The title of a tab">INCOMING</string>
@@ -171,7 +171,7 @@
 	<string name="file_properties_shared_folder_read_write" context="Refers to access rights for a file folder. (with the &amp; needed. Don't use the symbol itself. Use &amp;)">Read &amp; write</string>
 	<string name="file_properties_shared_folder_read_only" context="Refers to access rights for a file folder.">Read-only</string>
 	<string name="file_properties_shared_folder_shared_with" context="title of the screen that shows the users with whom the user has shared a folder">Shared with: </string>
-	<string name="file_properties_shared_folder_permissions" context="Item menu option upon right click on a file folder. Refers to the permissions of a file folder in the file manager.">Permissions:</string>
+	<string name="file_properties_shared_folder_permissions" context="Refers to the permissions of a file folder in the file manager.">Permissions:</string>
 	<string name="file_properties_shared_folder_change_permissions" context="menu item">Change permissions</string>
 	<string name="file_properties_shared_folder_select_contact" context="menu item">Share with</string>
 	<string name="file_properties_shared_folder_list_shares" context="when listing all the contacts that shares a folder">Shared with</string>
@@ -199,14 +199,14 @@
 	
     <string name="context_share_image" context="to share an image using Facebook, Whatsapp, etc">Share image using</string>
     <string name="context_get_link" context="create a link of a file and send it using an app from the device">Share link</string>
-    <string name="context_get_link_menu" context="Item menu option upon right click on one or multiple files.">Get link</string>
-    <string name="context_rename" context="Item menu option upon right click on one or multiple files.">Rename</string>
+    <string name="context_get_link_menu" context="Item menu option upon clicking on one or multiple files.">Get link</string>
+    <string name="context_rename" context="Item menu option upon clicking on one or multiple files.">Rename</string>
     <string name="context_renaming" context="while renaming a file or folder">Renaming</string>
-    <string name="context_download" context="Item menu option upon right click on one or multiple files.">Download</string>
-    <string name="context_move" context="Item menu option upon right click on one or multiple files.">Move</string>
+    <string name="context_download" context="Item menu option upon clicking on one or multiple files.">Download</string>
+    <string name="context_move" context="Item menu option upon clicking on one or multiple files.">Move</string>
     <string name="context_moving" context="while moving a file or folder">Moving</string>
     <string name="context_sharing" context="while sharing a folder">Sharing folder</string>
-    <string name="context_copy" context="Item menu option upon right click on one or multiple files.">Copy</string>
+    <string name="context_copy" context="Item menu option upon clicking on one or multiple files.">Copy</string>
     <string name="context_copying" context="while copying a file or folder">Copying</string>
     <string name="context_creating_link" context="status text">Creating link</string>
     <string name="context_moving_to_trash" context="status text">Moving to trash</string>
@@ -222,10 +222,10 @@
     <string name="context_remove" context="Menu option to delete one or multiple selected items.">Remove</string>
     <string name="context_share_folder" context="menu item">Share folder</string>
     <string name="context_view_shared_folders">View shared folders</string>
-    <string name="context_sharing_folder" context="Item menu option upon right click on one or multiple files.">Sharing</string>
+    <string name="context_sharing_folder" context="Item menu option upon clicking on one or multiple files.">Sharing</string>
     <string name="remove_all_sharing" context="status text">Removing all sharing contacts</string>
 	<string name="leave_incoming_share" context="status text">Leaving shared folder</string>
-    <string name="context_camera_folder" context="The location of where the user's photos/videos are stored.">Camera folder</string>
+    <string name="context_camera_folder" context="The location of where the user has the photos/videos stored.">Camera folder</string>
     <string name="context_mega_contacts" context="when sharing a folder, the user can choose a contact from MEGA">MEGA Contacts</string>
     <string name="context_phone_contacts" context="when sharing a folder, the user chan choose a contact from the device">Phone Contacts</string>
     <string name="context_delete" context="menu item">Delete</string>
@@ -265,7 +265,7 @@
 	<string name="upload_uploading" context="status text">Uploading</string>
 	<string name="upload_touch_to_cancel" context="hint to how to cancel the upload (by touching the notification)">Touch to cancel upload</string>
 	<string name="upload_failed" context="error message">Upload failed</string>
-	<string name="upload_uploaded" context=" Label for the upload date of a file. For example &quot;Uploaded: 2012-09-09  17:00&quot; (no need to put the colon punctuation in the translation)">uploaded</string>
+	<string name="upload_uploaded" context="Label for the current uploaded size of a file. For example, 3 files, 50KB uploaded">uploaded</string>
 	<string name="upload_cancel_uploading" context="Confirmation text for cancelling an upload">Do you want to cancel the upload?</string>
 	<string name="upload_prepare" context="Status text at the beginning of an upload">Processing file</string>
 	<string name="error_temporary_unavaible" context="error message when downloading a file">Resource temporarily not available, please try again later</string>
